# IntersectProject

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  geometry_objects.h  space.cc  space.h
tests/: CMakeLists.txt  test_intersect_points.cc  test_intersect_segments.cc  test_not_intersect.cc  tests.h
